--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,16 +1,19 @@
 .card {
-  font-size: 36px;
   display: inline-block;
   padding: 20px;
-  height: 100px;
-  width: 50px;
   background: #fff;
+  border: 1px solid #333;
 }
 
 .value {
-  padding: 10px 0 10px 10px;
+  display: block;
+  font-size: 36px;
+  padding: 0;
 }
 
 .suit {
-  padding: 10px 10px 10px 0;
+  display: block;
+  font-size: 48px;
+  padding: 0;
+  text-align: center;
 }
