--- a/pok/css/base.css
+++ b/pok/css/base.css
@@ -11,3 +11,11 @@ body {
   margin: 0;
   padding: 10px;
 }
+
+.card {
+  font-size: 2rem;
+  display: inline-block;
+  padding: 32px 16px;
+  margin: 16px;
+  border: 1px solid #000;
+}
